crates/explainsql-tui/tests/snapshots/render__help.snap
---
source: crates/explainsql-tui/tests/render.rs
expression: "frame(&mut app, 100, 30)"
---
369.3 ms. 51% of it in Seq Scan on order_items oi, which reads 3,000,000 rows over 10 loops, and the
join filter above keeps 14 of them.
Planning 0.526 ms · Execution 369.3 ms · Buffers 21,527 pages, 18% from cache
 Plan · time in each node ──────────────────────────────────────────────────────────────────────────
    Share     Time┌ Keys ────────────────────────────────────────────────────────┐s Estimate Buffers
!     45% 167.8 ms│ j k ↓ ↑     Move                                             │4       15       0
     3.3%  12.1 ms│ PgDn PgUp   Move a page                                      │0       10   2,417
!     51% 189.3 ms│ g G         First, last node                                 │0  300,000  19,110
 Details ─────────│ h l ← →     Fold, unfold (h on a leaf: go to its parent)     │──────────────────
Nested Loop       │ Enter Space Fold or unfold                                   │
Time in node: 167.│ /           Search node names and conditions                 │
With children: 369│ n N         Next, previous match                             │
Rows: 14 per loop │ 1 … 9       Go to the slowest nodes                          │
Estimate: 15 rows;│ f i         Show the findings, the advice                    │
Removed by join fi│ Tab         Switch between the plan and the list             │
Buffers: shared hi│ Enter       In the list: go to the node                      │
Read by the node i│ c           Copy the suggested CREATE INDEX                  │
                  │ x           Time in the node, or including its children      │
Join Filter: (o.id│ w           Wall-clock or CPU time (parallel plans)          │
Output: o.id, oi.p│ b           Time or buffers                                  │
                  │ J K         Scroll the details                               │
HIGH   ES005 Expen│ ?           This help                                        │
On Nested Loop    │ q Esc       Quit                                             │
Nested Loop repeat│             Any key closes this help.                        │p's time.
Inner loops: 10   └──────────────────────────────────────────────────────────────┘
Inner side per loop: 18.9 ms
 Findings (2) │ Advice (1) · Tab to browse, f/i to switch ──────────────────────────────────────────
HIGH   ES001 Selective sequential scan: Seq Scan on order_items oi reads 3,000,000 rows over 10 loo…
HIGH   ES005 Expensive nested-loop inner side: Nested Loop repeats Seq Scan on order_items oi 10 ti…
j/k move  h/l fold  / search  1-9 hotspots  Tab list  i advice  ? help  q quit
